# io-rust

./: Cargo.toml  README.md
client/: Cargo.toml  build.sh  index.html
client/src/: lib.rs  render.rs  util.rs
server/: Cargo.toml
server/src/: component.rs  event.rs  main.rs  server.rs  system.rs
server/static/: index.html
shared/: Cargo.toml
shared/src/: lib.rs
