[package]
name = "game-client"
version = "0.1.0"
authors = ["Qingyuan Liu <pixelledliu@gmail.com>", "Shuxian Wang <wsx@udscbt.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
game-shared = { path = "../shared" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
ws_stream_wasm = "0.6"
futures = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]
