[package]
name = "game-client"
version = "0.1.0"
authors = ["Sicheng Pan <sicheng0129@gmail.com>", "Qingyuan Liu <pixelledliu@gmail.com>", "Shuxian Wang <wsx@udscbt.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
game-shared = { path = "../shared" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
ws_stream_wasm = "0.6"
futures = "0.3"
futures-signals = "0.3"
pin-project = "1.0"
console_error_panic_hook = "0.1"
gloo = "0.2"
piet = "0.3"
piet-web = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "ImageData",
    "KeyboardEvent",
    "MouseEvent",
    "HtmlCanvasElement",
    "Window",
]
