[package]
name = "game-server"
version = "0.1.0"
authors = ["Shuxian Wang <wsx@udscbt.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
actix-files = "0.4.1"
futures = "0.3.8"
