[package]
name = "game-server"
version = "0.1.0"
authors = ["Sicheng Pan <sicheng0129@gmail.com>", "Qingyuan Liu <pixelledliu@gmail.com>", "Shuxian Wang <wsx@udscbt.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-shared = { path = "../shared" }
actix = "0.10"
actix-web = "3.3"
actix-web-actors = "3.0"
actix-files = "0.4"
futures = "0.3"
bevy = "0.4"
rand = "0.8"
bevy_rapier2d = { version = "0.7", features = [ "simd-stable", "parallel" ] }